--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   path_provider: ^2.0.11
   json_serializer: ^0.2.0
   jiffy: ^6.3.1
+  share_plus: ^10.0.3
 #  flutter_share: ^2.0.0
 
 dev_dependencies:
