--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,7 +28,7 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 21
-        targetSdk = 34
+        targetSdk = 33
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
@@ -44,4 +44,12 @@ android {
 
 flutter {
     source = "../.."
+}
+dependencies {
+    implementation("com.google.mlkit:text-recognition:16.0.0") {
+        exclude group: "com.google.firebase", module: "firebase-iid"
+    }
+    implementation("com.google.firebase:firebase-messaging:24.0.1") {
+        exclude group: "com.google.firebase", module: "firebase-iid"
+    }
 }
