--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,7 +73,7 @@ dependencies:
   intl: any
   # firebase notification
   firebase_core: ^3.4.1
-  firebase_messaging: ^15.1.1
+  firebase_messaging: ^15.1.3
   googleapis: ^13.2.0
   googleapis_auth: ^1.6.0
   permission_handler: ^11.3.1
@@ -84,8 +84,10 @@ dependencies:
   json_serializer: ^0.2.0
   jiffy: ^6.3.1
   share_plus: ^10.0.3
-#  flutter_share: ^2.0.0
-
+  image_picker: ^1.1.2
+  google_mlkit_text_recognition: ^0.14.0
+  image_cropper: ^8.0.2
+  speech_to_text: ^7.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
